--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -484,12 +484,12 @@ rule-providers:
 #   interval: # 自动更新间隔，仅在类型为 HTTP 时可用
 
 
-  #🍎Apple_domain:
-  #  type: http
-  #  behavior: classical
-  #  path: ./RuleSet/Extra/Apple_domain.yaml
-  #  url: "https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Apple_domain.yaml"
-  #  interval: 86400
+  🍎Apple_domain:
+    type: http
+    behavior: classical
+    path: ./RuleSet/Extra/Apple_domain.yaml
+    url: "https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Apple_domain.yaml"
+    interval: 86400
 
   #🍎Apple_ip:
   #  type: http
