--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -252,7 +252,7 @@ proxy-providers:
   #   health-check:
   #     enable: true
   #     interval: 600
-  #     url: http://www.gstatic.com/generate_204
+  #     url: https://www.gstatic.com/generate_204
   # 此处只是订阅示例，如果没有订阅链接的使用需求，此处及 proxy-groups 的相关内容可删除
 
   Airport A: 
@@ -263,7 +263,7 @@ proxy-providers:
     health-check:
       enable: true
       interval: 600
-      url: http://www.gstatic.com/generate_204
+      url: https://www.gstatic.com/generate_204
   
 
   Airport B:      
@@ -274,7 +274,7 @@ proxy-providers:
     health-check:
       enable: true
       interval: 600
-      url: http://www.gstatic.com/generate_204    
+      url: https://www.gstatic.com/generate_204    
  
   #MIXED US:      
   #  type: http
@@ -285,7 +285,7 @@ proxy-providers:
   #  health-check:
   #    enable: true
   #    interval: 600
-  #    url: http://www.gstatic.com/generate_204    
+  #    url: https://www.gstatic.com/generate_204    
   
 
 proxy-groups:
@@ -349,14 +349,14 @@ proxy-groups:
     proxies:
       - main(Auto)
       - backup(Auto)
-    url: 'http://www.gstatic.com/generate_204'
+    url: 'https://www.gstatic.com/generate_204'
     interval: 300 
 
   - name: "main(Auto)"
     type: url-test
     use:
       - Airport A
-    url: 'http://www.gstatic.com/generate_204'
+    url: 'https://www.gstatic.com/generate_204'
     interval: 300
     tolerance: 40
     filter: '香港|hk|hong'
@@ -367,7 +367,7 @@ proxy-groups:
     type: url-test
     use:
       - Airport B
-    url: 'http://www.gstatic.com/generate_204'
+    url: 'https://www.gstatic.com/generate_204'
     interval: 300
     tolerance: 40
     lazy: true
