--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -603,6 +603,13 @@ rule-providers:
     path: ./ruleset/reject.yaml
     interval: 86400
   
+  reject_ip:
+    type: http
+    behavior: ipcidr
+    url: "https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Reject_ip.yaml"
+    path: ./ruleset/reject_ip.yaml
+    interval: 86400
+  
   Refuse:
     type: http
     behavior: classical
@@ -737,6 +744,7 @@ rules:
 
     # IP REJECT
     - IP-CIDR,198.18.0.1/16,REJECT,no-resolve
+    - RULE-SET,reject_ip,REJECT,no-resolve
     # lan ip
     - RULE-SET,lancidr,DIRECT,no-resolve
 
