reject domain support

--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -599,7 +599,7 @@ rule-providers:
   reject:
     type: http
     behavior: domain
-    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/reject.txt"
+    url: "https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Reject_domain.txt"
     path: ./ruleset/reject.yaml
     interval: 86400
   
