--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -1,14 +1,14 @@
 # Port of HTTP(S) proxy server on the local end
-# port: 7890
+ port: 7890
 
 # Port of SOCKS5 proxy server on the local end
-# socks-port: 7891
+ socks-port: 7891
 
 # Transparent proxy server port for Linux and macOS (Redirect TCP and TProxy UDP)
-# redir-port: 7892
+ redir-port: 7892
 
 # Transparent proxy server port for Linux (TProxy TCP and TProxy UDP)
-# tproxy-port: 7893
+ tproxy-port: 7893
 
 # HTTP(S) and SOCKS4(A)/SOCKS5 server on the same port
 mixed-port: 7890
@@ -83,20 +83,21 @@ profile:
   # Store the `select` results in $HOME/.config/clash/.cache
   # set false If you don't want this behavior
   # when two different configurations have groups with the same name, the selected values are shared
-  store-selected: false
+  store-selected: true
 
 # DNS server settings
 # This section is optional. When not present, the DNS server will be disabled.
 dns:
-  enable: false
-  listen: 0.0.0.0:53
+  enable: true
+  listen: 0.0.0.0:7874
   # ipv6: false # when the false, response to AAAA questions will be empty
 
   # These nameservers are used to resolve the DNS nameserver hostnames below.
   # Specify IP addresses only
   default-nameserver:
     - 119.29.29.29
-  enhanced-mode: redir-host # or fake-ip
+    - 223.5.5.5
+  enhanced-mode: fake-ip # or fake-ip
   fake-ip-range: 198.18.0.1/16 # Fake IP addresses pool CIDR
   # use-hosts: true # lookup hosts and return IP record
   
@@ -124,6 +125,7 @@ dns:
   # involved. Clash answers the DNS question with the first result gathered.
   nameserver:
     - 119.29.29.29
+    - 223.5.5.5
     # - 114.114.114.114 # default value
     # - 8.8.8.8 # default value
     # - tls://dns.rubyfish.cn:853 # DNS over TLS
@@ -134,9 +136,9 @@ dns:
   # to the servers in this section along with servers in `nameservers`.
   # The answers from fallback servers are used when the GEOIP country
   # is not `CN`.
-  # fallback:
-  #   - tcp://1.1.1.1
-
+   fallback:
+     - tls://1dot1dot1dot1.cloudflare-dns.com#✈️PROXY
+     - tls://dns.google#✈️PROXY
   # If IP addresses resolved with servers in `nameservers` are in the specified
   # subnets below, they are considered invalid and results from `fallback`
   # servers are used instead.
@@ -148,15 +150,18 @@ dns:
   # are always used if not match `fallback-filter.ipcidr`.
   #
   # This is a countermeasure against DNS pollution attacks.
-  # fallback-filter:
-  #   geoip: true
-  #   geoip-code: CN
-  #   ipcidr:
-  #     - 240.0.0.0/4
-  #   domain:
-  #     - '+.google.com'
-  #     - '+.facebook.com'
-  #     - '+.youtube.com'
+   fallback-filter:
+     geoip: true
+     geosite:
+       - "!cn"
+       - gfw
+     geoip-code: CN
+     ipcidr:
+       - 240.0.0.0/4
+     domain:
+       - '+.google.com'
+       - '+.facebook.com'
+       - '+.youtube.com'
   
   # Lookup domains via specific nameservers
   # nameserver-policy:
