--- a/refuse.yaml
+++ b/refuse.yaml
@@ -1,7 +1,7 @@
   payload:
   
     - DOMAIN,ws.infinitynewtab.com,REJECT
-    - DOMAIN-SUFFIX,inftab.com,REJECT
+    #S- DOMAIN-SUFFIX,inftab.com,REJECT
     - DOMAIN,www.msftconnecttest.com,REJECT
     - DOMAIN-SUFFIX,playstation.com,REJECT
     - DOMAIN-SUFFIX,playstation.net,REJECT
