--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -50,6 +50,7 @@
   - DOMAIN-SUFFIX,hxcy.moe
   - DOMAIN,1dot1dot1dot1.cloudflare-dns.com
   - DOMAIN,gstatic.com
+  - DOMAIN-SUFFIX,vercel.com
 
   #- DOMAIN,ws.infinitynewtab.com
   #- DOMAIN,www.msftconnecttest.com
