adapt namesrever-policy

--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -94,9 +94,9 @@ dns:
 
   # These nameservers are used to resolve the DNS nameserver hostnames below.
   # Specify IP addresses only
-  default-nameserver:
-    - 119.29.29.29
-    - 223.5.5.5
+  #default-nameserver:
+  #  - 119.29.29.29
+  #  - 223.5.5.5
   enhanced-mode: fake-ip # or fake-ip
   fake-ip-range: 198.18.0.1/16 # Fake IP addresses pool CIDR
   # use-hosts: true # lookup hosts and return IP record
@@ -123,9 +123,17 @@ dns:
   # Supports UDP, TCP, DoT, DoH. You can specify the port to connect to.
   # All DNS questions are sent directly to the nameserver, without proxies
   # involved. Clash answers the DNS question with the first result gathered.
+  default-nameserver: #parse DOH/DOT/DOQ dns
+      - 223.6.6.6
+      - 129.29.29.29
   nameserver:
-    - 119.29.29.29
-    - 223.5.5.5
+      - tls://dns.google
+      - tls://1dot1dot1dot1.cloudflare-dns.com
+  proxy-server-nameserver:
+      - 129.29.29.29
+      - 223.6.6.6
+  nameserver-policy:
+      "geosite:cn": 223.6.6.6
     # - 114.114.114.114 # default value
     # - 8.8.8.8 # default value
     # - tls://dns.rubyfish.cn:853 # DNS over TLS
@@ -133,35 +141,36 @@ dns:
     # - dhcp://en0 # dns from dhcp
 
   # When `fallback` is present, the DNS server will send concurrent requests
-  # to the servers in this section along with servers in `nameservers`.
+  # to the servers in this section along with servers in `nameservers`.                         #fallback is a history now, metaclash use nameserver-policy
+  #                                                                                             #for better DNS routing 
   # The answers from fallback servers are used when the GEOIP country
   # is not `CN`.
-  fallback:
-     - tls://1dot1dot1dot1.cloudflare-dns.com#✈️PROXY
-     - tls://dns.google#✈️PROXY
-  # If IP addresses resolved with servers in `nameservers` are in the specified
-  # subnets below, they are considered invalid and results from `fallback`
-  # servers are used instead.
-  #
-  # IP address resolved with servers in `nameserver` is used when
-  # `fallback-filter.geoip` is true and when GEOIP of the IP address is `CN`.
-  #
-  # If `fallback-filter.geoip` is false, results from `nameserver` nameservers
-  # are always used if not match `fallback-filter.ipcidr`.
-  #
-  # This is a countermeasure against DNS pollution attacks.
-  fallback-filter:
-     geoip: true
-     geosite:
-       - "!cn"
-       - gfw
-     geoip-code: CN
-     ipcidr:
-       - 240.0.0.0/4
-     domain:
-       - '+.google.com'
-       - '+.facebook.com'
-       - '+.youtube.com'
+  #fallback:
+  #   - tls://1dot1dot1dot1.cloudflare-dns.com#✈️PROXY
+  #   - tls://dns.google#✈️PROXY
+  ## If IP addresses resolved with servers in `nameservers` are in the specified
+  ## subnets below, they are considered invalid and results from `fallback`
+  ## servers are used instead.
+  ##
+  ## IP address resolved with servers in `nameserver` is used when
+  ## `fallback-filter.geoip` is true and when GEOIP of the IP address is `CN`.
+  ##
+  ## If `fallback-filter.geoip` is false, results from `nameserver` nameservers
+  ## are always used if not match `fallback-filter.ipcidr`.
+  ##
+  ## This is a countermeasure against DNS pollution attacks.
+  #fallback-filter:
+  #   geoip: true
+  #   geosite:
+  #     - "!cn"
+  #     - gfw
+  #   geoip-code: CN
+  #   ipcidr:
+  #     - 240.0.0.0/4
+  #   domain:
+  #     - '+.google.com'
+  #     - '+.facebook.com'
+  #     - '+.youtube.com'
   
   # Lookup domains via specific nameservers
   # nameserver-policy:
