rm #- DOMAIN,music.163-my-beloved.com

--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -51,7 +51,7 @@
   - DOMAIN,1dot1dot1dot1.cloudflare-dns.com
   - DOMAIN,gstatic.com
   - DOMAIN-SUFFIX,vercel.com
-  - DOMAIN,music.163-my-beloved.com
+  #- DOMAIN,music.163-my-beloved.com
 
   #- DOMAIN,ws.infinitynewtab.com
   #- DOMAIN,www.msftconnecttest.com
