#- DOMAIN,www.msftconnecttest.com

--- a/refuse.yaml
+++ b/refuse.yaml
@@ -1,7 +1,7 @@
   payload:
     #- DOMAIN,ws.infinitynewtab.com
     - DOMAIN,basic-static-server.inftab.com
-    - DOMAIN,www.msftconnecttest.com
+    #- DOMAIN,www.msftconnecttest.com
     - DOMAIN-SUFFIX,playstation.com
     - DOMAIN-SUFFIX,playstation.net
     - DOMAIN-SUFFIX,playstation.org
