--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -36,7 +36,7 @@ mode: rule
 
 # Clash by default prints logs to STDOUT
 # info / warning / error / debug / silent
-log-level: info
+log-level: error
 
 # When set to false, resolver won't translate hostnames to IPv6 addresses
 ipv6: true
