--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -134,6 +134,7 @@ dns:
       - 119.29.29.29
       - 223.6.6.6
   nameserver-policy:
+      "geosite:gfw": tls://dns.google
       "geosite:cn": 223.6.6.6
     # - 114.114.114.114 # default value
     # - 8.8.8.8 # default value
