comments on DOH

--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -132,8 +132,8 @@ dns:
       #- tls://1dot1dot1dot1.cloudflare-dns.com
       - quic://dns.nextdns.io
   proxy-server-nameserver:
-      - 119.29.29.29      # use DOH if redir-host mode to counter hijack
-      - 223.6.6.6         # https://dns.alidns.com https://doh.pub/dns-query
+      - 119.29.29.29      # use DOH if redir-host mode to counter hijack, 
+      - 223.6.6.6         # https://doh.pub/dns-query https://dns.alidns.com/dns-query
   nameserver-policy:
       "geosite:gfw": tls://dns.google
       "geosite:cn": 223.6.6.6           # use DOH if redir-host mode to counter hijack
