--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -135,7 +135,7 @@ dns:
       - 119.29.29.29      
       - 223.6.6.6         
   nameserver-policy:
-      "geosite:gfw": [tls://dns.google,quic://818f63.dns.nextdns.io]           #[https://doh.pub/dns-query,https://dns.alidns.com/dns-query]
+      "geosite:gfw": [tls://dns.google,quic://dns.nextdns.io]           #[https://doh.pub/dns-query,https://dns.alidns.com/dns-query]
       "geosite:cn": [223.6.6.6,119.29.29.29]           
     # - 114.114.114.114 # default value
     # - 8.8.8.8 # default value
