--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -742,7 +742,7 @@ rules:
     - RULE-SET,TikTok,🇯🇵DMM/Mgstage/Tiktok #proxy group
     - DOMAIN-SUFFIX,mgstage.com,🇯🇵DMM/Mgstage/Tiktok #proxy group
     - RULE-SET,DMM_domain,🇯🇵DMM/Mgstage/Tiktok #proxy group
-    - RULE-SET,Twitch,🇯🇵DMM/Mgstage/Tiktok
+    - RULE-SET,Twitch,🇯🇵DMM/Mgstage/Tiktok #proxy group
     
     - RULE-SET,E-Hentai_domain,e-hentai #proxy group
     
