--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -120,7 +120,58 @@ dns:
     - '*.blzstatic.cn'
     - '*.battle.net'
     - '*.wegame.com.cn'
-  
+    - "*.localdomain"
+    - "*.example"
+    - "*.invalid"
+    - "*.localhost"
+    - "*.test"
+    - "*.local"
+    - "*.home.arpa"
+    - time.*.com
+    - time.*.edu.cn
+    - time.*.gov
+    - time.*.apple.com
+    - time-ios.apple.com
+    - time1.*.com
+    - time2.*.com
+    - time3.*.com
+    - time4.*.com
+    - time5.*.com
+    - time6.*.com
+    - time7.*.com
+    - ntp.*.com
+    - ntp1.*.com
+    - ntp2.*.com
+    - ntp3.*.com
+    - ntp4.*.com
+    - ntp5.*.com
+    - ntp6.*.com
+    - ntp7.*.com
+    - "*.time.edu.cn"
+    - "*.ntp.org.cn"
+    - "+.pool.ntp.org"
+    - time1.cloud.tencent.com
+    - stun.*.*
+    - stun.*.*.*
+    - "+.stun.*.*"
+    - "+.stun.*.*.*"
+    - "+.stun.*.*.*.*"
+    - "+.stun.*.*.*.*.*"
+    - "+.dns.google"
+    - "+.api.day.app"
+    - baidu.com
+    - tracker.*.*
+    - tracker.*.*.*
+    - "+.tracker.*.*"
+    - "+.tracker.*.*.*"
+    - "+.tracker.*.*.*.*"
+    - "+.tracker.*.*.*.*.*"
+    - torrent.*.*
+    - torrent.*.*.*
+    - "+.torrent.*.*"
+    - "+.torrent.*.*.*"
+    - "+.torrent.*.*.*.*"
+    - "+.torrent.*.*.*.*.*"
   # Supports UDP, TCP, DoT, DoH. You can specify the port to connect to.
   # All DNS questions are sent directly to the nameserver, without proxies
   # involved. Clash answers the DNS question with the first result gathered.
