--- a/onlinegame.yaml
+++ b/onlinegame.yaml
@@ -8,6 +8,9 @@ payload:
 #-------------------league of legend AU----------------------------------
   - '103.240.226.0/24'
   - '103.240.226.255/24'
+#-------------------league of legend TW----------------------------------
+
+  - '103.240.224.183/32'
 #-------------------Nintendo switch server---------------------------------- 
 
 #Maplestory-TW
