bing proxy for chatgpt

--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -847,6 +847,7 @@ rules:
     
     - RULE-SET,bt-trackers,DIRECT
    
+    - DOMAIN-SUFFIX,bing.com,✈️PROXY
     - RULE-SET,Microsoft,DIRECT
     
     - GEOSITE,apple@cn,DIRECT
