--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -50,7 +50,6 @@
   - DOMAIN,1dot1dot1dot1.cloudflare-dns.com
   - DOMAIN,gstatic.com
   - DOMAIN-SUFFIX,vercel.com
-  #- DOMAIN,music.163-my-beloved.com
-
-  #- DOMAIN,ws.infinitynewtab.com
-  #- DOMAIN,www.msftconnecttest.com
+  
+  # Amazon cloudfront service
+  - DOMAIN-SUFFIX,cloudfront.net
